--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
                     <li><a href="">Контакты</a></li>
                 </ul>
         </nav>
-        <ul>
-            <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+        <address>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+        </address>
 
     </header>
 
@@ -34,25 +36,25 @@
         <section>
             <ul>
                 <li>
-                    <h2>Внимание к деталям</h2>
+                    <h3>Внимание к деталям</h3>
                         <p>
                             Идейные соображения, а также начало повседневной работы по формированию позиции.
                         </p>
                 </li>
                 <li>
-                    <h2>Пунктуальность</h2>
+                    <h3>Пунктуальность</h3>
                         <p>
                             Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                         </p>
                 </li>
                 <li>
-                    <h2>Планирование</h2>
+                    <h3>Планирование</h3>
                         <p>
                             Равным образом консультация с широким активом в значительной степени обуславливает.
                         </p>
                 </li>
                 <li>
-                    <h2>Современные технологии</h2>
+                    <h3>Современные технологии</h3>
                         <p>
                             Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                         </p>
@@ -107,7 +109,7 @@
             <address>
                 <ul>
                     <li><a href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки,26</a></li>
-                    <li><a class="link" href="mailto:info@devstudio.com">info@example.com</a></li>
+                    <li><a href="mailto:info@devstudio.com">info@example.com</a></li>
                     <li><a href="tel:+380961111111">+380961111111</a></li>
                 </ul>
             </address>
